--- a/app/public/css/show-case.css
+++ b/app/public/css/show-case.css
@@ -1,9 +1,47 @@
 .news_a {
   padding-top: 80px;
   padding: 80px 0 0;
+  background: url(../image/case_bg.jpg) no-repeat center center / cover;
 }
 .news_a .news-ul {
-  margin-bottom: 50px;
+  padding-bottom: 50px;
+}
+.news-ul li .text-box .tl {
+  margin-bottom: 0;
+}
+.news-ul li {
+  width: 23.5%;
+  padding: 10px 10px 0 10px;
+  background-color: #fff;
+  box-sizing: border-box;
+}
+.news-ul li :hover .see-img{
+  opacity: 1;
+}
+.news-ul li .see-img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 50px;
+  height: 50px;
+  margin-left: -25px;
+  margin-top: -25px;
+  opacity: 0; 
+  transition: opacity 1s;
+}
+.news-ul li .imgbox {
+  width: 100%;
+  height: 0;
+  padding-top: 100%;
+  position: relative;
+}
+.news-ul li .imgbox img {
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
 }
 .news_b {
   padding: 5.2084% 0;
@@ -13,7 +51,7 @@
   padding: 0 0 60px;
 }
 .news_b .wrap .content {
-  /* max-width: 1000px; */
+  max-width: 1000px;
   width: 90%;
   margin: 0 auto;
 }
@@ -74,7 +112,7 @@
 }
 @media (max-width: 1366px) {
   .news_a {
-    padding-top: 60px;
+    padding-top: 80px;
   }
   .news_b .wrap .content .title-box .title {
     font-size: 24px;
@@ -82,10 +120,10 @@
 }
 @media (max-width: 768px) {
   .news_b {
-    padding: 80px 0;
+    padding: 50px 0;
   }
-  .news_b .content {
-    min-height: 400px;
+  .news-ul li {
+    width: 100%;
   }
   .news_b .wrap .content .title-box {
     padding-top: 40px;
