--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -348,6 +348,8 @@ textarea {
     top: 0;
     left: 0;
     width: 100%;
+    z-index: 100;
+    background: #fff;
 }
 
 .mo-head a img {
@@ -863,6 +865,14 @@ textarea {
     .mo-header {
         display: block;
     }
+
+    .header-box {
+        position: sticky;
+        top: 0;
+        left: 0;
+        width: 100%;
+        z-index: 10;
+    }
 }
 
 
@@ -1235,4 +1245,40 @@ textarea {
     display: inline-block;
     margin: 0 5px;
 
+}
+
+/* 联系我们 */
+.contact-box .title {
+    text-align: center;
+    font-size: 24px;
+    color: #333333;
+    margin-top: 15px;
+}
+
+.contact-box .desc {
+    width: 80%;
+    margin: 20px auto 35px;
+    font-size: 16px;
+    color: #666666;
+    line-height: 28px;
+    text-align: center;
+}
+
+#map {
+    width: 100%;
+    height: 500px;
+}
+
+
+
+
+
+
+
+
+
+@media screen and (max-width:1024px) {
+    .footer-top {
+        display: none;
+    }
 }
