--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -599,8 +599,9 @@ textarea {
 }
 
 .conn-flex .conn-right {
-    flex: 1;
+    /* flex: 1; */
     padding-left: 30px;
+    width: calc(100% - 280px);
 }
 
 
@@ -868,8 +869,9 @@ textarea {
 }
 
 .news-list li>a .news-text {
-    flex: 1;
+    /* flex: 1; */
     padding-right: 15px;
+    width: calc(100% - 85px);
 }
 
 .news-list li>a .news-title {
@@ -1145,7 +1147,6 @@ textarea {
 
 #navbar-box .inbox {
     width: 100%;
-    margin-left: 1px;
     position: absolute;
     left: 50%;
     top: 0;
@@ -1328,21 +1329,26 @@ textarea {
     margin: 0 -15px;
 }
 
-.goods-list li {
+.goods-list .lis {
     width: calc(100% / 3);
     padding: 0 15px 30px;
 }
 
-.goods-list li a {
+.goods-list .lis.swiper-slide {
+    width: unset;
+    padding: unset;
+}
+
+.goods-list .lis a {
     display: block;
 
 }
 
-.goods-list li a .goods-img {
+.goods-list .lis a .goods-img {
     padding-bottom: 100%;
 }
 
-.goods-list li a .goods-img::before {
+.goods-list .lis a .goods-img::before {
     content: "";
     width: 100%;
     height: 100%;
@@ -1352,7 +1358,7 @@ textarea {
     border: solid 1px #dddddd;
 }
 
-.goods-list li a .goods-tle {
+.goods-list .lis a .goods-tle {
     font-size: 14px;
     line-height: 24px;
     text-align: center;
@@ -1363,15 +1369,15 @@ textarea {
     padding: 10px 20px;
 }
 
-.goods-list li a:hover {
+.goods-list .lis a:hover {
     color: #1e76cf;
 }
 
-.goods-list li .video-img {
+.goods-list .lis .video-img {
     padding-bottom: 75%;
 }
 
-.goods-list li .video-img video {
+.goods-list .lis .video-img video {
     position: absolute;
     top: 0;
     left: 0;
@@ -1380,6 +1386,237 @@ textarea {
     object-fit: cover;
     z-index: 10;
 }
+
+.goods-detail .goods-top {
+    display: flex;
+
+}
+
+.goods-detail .goods-top .lt {
+    width: 45%;
+
+}
+
+.goods-detail .goods-top .rt {
+    width: 55%;
+    --left-blank-width: 40px;
+    padding-left: var(--left-blank-width);
+    position: relative;
+
+}
+
+.goods-detail .goods-top .rt .tle {
+    font-size: 24px;
+    color: #333333;
+    margin-bottom: 24px;
+}
+
+.goods-detail .goods-top .rt .desc {
+    font-size: 20px;
+    color: #555;
+    line-height: 32px;
+    margin-bottom: 20px;
+}
+
+.goods-detail .goods-top .rt .bot {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: calc(100% - var(--left-blank-width));
+    display: flex;
+    justify-content: space-between;
+}
+
+.goods-detail .goods-top .rt .bot>a {
+    width: 30%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    line-height: 54px;
+    border: solid 1px #dddddd;
+    font-size: 16px;
+    transition: all ease 0.3s;
+}
+
+.goods-detail .goods-top .rt .bot>a .te {
+    font-weight: bold;
+
+    color: #1e76cf;
+}
+
+.goods-detail .goods-top .rt .bot>a img {
+    margin-left: 3px;
+}
+
+.goods-detail .swiper-big .swiper-slide {
+    position: relative;
+    padding-bottom: 100%;
+}
+
+.goods-detail .goods-top .rt .bot>a:hover {
+    border-color: #1e76cf;
+    background: #1e76cf;
+    color: #fff;
+}
+
+.goods-detail .goods-top .rt .bot>a:hover .te {
+    color: #fff;
+}
+
+.goods-detail .goods-top .rt .bot>a:hover img {
+    filter: brightness(10);
+}
+
+.goods-detail .swiper-big .swiper-slide>img {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.goods-detail .swiper-btn {
+    position: relative;
+    margin-top: 10px;
+}
+
+.goods-detail .swiper-btn .bt {
+    position: absolute;
+    width: 20px;
+    height: 100%;
+    top: 0;
+    border: solid 1px #999999;
+    -webkit-transition: all ease 0.3s;
+    -o-transition: all ease 0.3s;
+    -moz-transition: all ease 0.3s;
+    transition: all ease 0.3s;
+    background-position: center;
+    background-repeat: no-repeat;
+    cursor: pointer;
+    display: block;
+}
+
+.goods-detail .swiper-btn .bt:hover:not(.swiper-button-disabled) {
+    border-color: #1e76cf;
+    background-color: #1e76cf;
+}
+
+.goods-detail .swiper-btn .swiper-btn-prev {
+    left: 0;
+    background-image: url(../image/prev_jt_03.png);
+}
+
+.goods-detail .swiper-btn .swiper-btn-next {
+    right: 0;
+    background-image: url(../image/next_jt_03.png);
+}
+
+.goods-detail .swiper-btn .swiper-sm {
+    width: calc(100% - 60px);
+    margin: 0 auto;
+}
+
+.goods-detail .swiper-sm .swiper-slide {
+    /* position: relative;
+    padding-bottom: 100%; */
+    border: 2px solid #999;
+}
+
+.goods-detail .swiper-sm .swiper-slide>img {
+    width: 100%;
+    /* height: 100%; */
+    /* position: absolute;
+    top: 0;
+    left: 0; */
+    aspect-ratio: 1/1;
+}
+
+.goods-detail .swiper-sm .swiper-slide-thumb-active {
+    border-color: #1e76cf;
+}
+
+.goods-detail .out-box {
+    position: relative;
+    height: 60px;
+    margin: 40px 0 0;
+}
+
+.mao-box {
+    position: absolute;
+    width: 100%;
+    line-height: 60px;
+    background-color: #f0f0f0;
+}
+
+.mao-box .mao-flex {
+    display: flex;
+    text-align: center;
+}
+
+.mao-box .mao-flex a {
+    width: calc(100% / 3);
+    font-size: 20px;
+    transition: all ease 0.3s;
+    color: #333;
+}
+
+.mao-box .mao-flex a.act {
+    color: #fff;
+    background: #1e76cf;
+}
+
+.pro-detail-box .ls-tle {
+    padding: 60px 0 50px;
+    font-weight: bold;
+    font-size: 24px;
+    color: #333333;
+    text-align: center;
+}
+
+.pro-detail-box .pro-info-li:nth-child(2n) {
+    background-color: #f0f0f0;
+}
+
+.service-ul {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 -15px;
+    padding-bottom: 60px;
+}
+
+.service-ul li {
+    width: 50%;
+    padding: 30px;
+    border: 1px solid #fff;
+    display: flex;
+}
+
+.service-ul li .icon img {
+    width: 44px;
+    height: 44px;
+}
+
+.service-ul li .text-box {
+    width: calc(100% - 45px);
+    padding-left: 10px;
+}
+
+.service-ul li .text-box .tl {
+    color: #333333;
+    margin-bottom: 10px;
+    font-size: 16px;
+}
+
+.service-ul li .text-box .te {
+    line-height: 26px;
+    font-size: 14px;
+}
+
+.swiper-pag{
+    height: 40px;
+    position: relative;
+}
+
 
 /* 使用案例 */
 .case-box {
@@ -1496,6 +1733,18 @@ textarea {
 
 }
 
+.case-detail-box .pos {
+    padding-bottom: 60%;
+}
+
+.case-detail-box .pos>iframe {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+}
+
 /* 联系我们 */
 .contact-box .title {
     text-align: center;
@@ -1518,6 +1767,34 @@ textarea {
     height: 500px;
 }
 
+
+/* 合作客户 */
+.cooper-box .tle {
+    font-weight: Bold;
+    font-size: 24px;
+    margin-bottom: 30px;
+    color: #333333;
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.cooper-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 0 -20px;
+min-height: 250px;
+}
+
+.cooper-list li {
+    width: calc(100% / 6);
+    padding: 10px 20px;
+}
+
+.cooper-list li a.pos {
+    padding-bottom: 45%;
+    border: 1px solid #eee;
+}
 
 
 @media screen and (max-width:1560px) {
