--- a/app/public/css/index.css
+++ b/app/public/css/index.css
@@ -1,6 +1,12 @@
 .fp-watermark {
     display: none;
 }
-.banner-swiper{
-
+.banner-swiper .swiper-slide{
+    width: 100%;
+    height: 100vh;
+}
+.banner-swiper .swiper-slide img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
