--- a/app/public/css/index.css
+++ b/app/public/css/index.css
@@ -92,6 +92,7 @@
 
 .index-d .index-b-box {
     color: #000;
+    margin-bottom: 10%;
 }
 
 .index-d .index-b-box .btn-box .btn {
@@ -111,12 +112,32 @@
     font-size: 16px;
 }
 
+.index-d .product-img {
+    height: 60px;
+    margin-bottom: 10px;
+}
+
+.index-d .product-img img {
+    max-height: 100%;
+}
+
+
 .swp-cooper-box {
-    margin-top: 30px;
+    margin-top: 50px;
+}
+
+.swp-cooper-box .swp-cooper {
+    width: 90%;
+    height: 460px;
+    margin: 0 auto;
+}
+
+.swp-cooper-box .swp-cooper .swiper-slide {
+    height: calc((100% - 60px) / 3);
 }
 
 .swp-cooper-box .swp-cooper .pos {
-    padding-bottom: 50%;
+    height: 100%;
 }
 
 .swp-cooper-box .control-box {
@@ -131,4 +152,27 @@
     cursor: pointer;
     display: block;
     margin: 20px;
+}
+
+.index-e .title {
+    padding-top: 50px;
+}
+
+#footer .fp-overflow{
+    overflow: unset;
+}
+
+
+@media screen and (max-width:1560px) {
+    .swp-cooper-box .swp-cooper {
+        width: 100%;
+        height: 400px;
+    }
+
+}
+
+@media screen and (max-width:1365px) {
+    .swp-cooper-box .swp-cooper {
+        height: 320px;
+    }
 }
